--- a/pdf/bee.yaml
+++ b/pdf/bee.yaml
@@ -1,7 +1,7 @@
 clef-signer-enable: false
 data-dir: G:/.bee
 swap-enable: true
-swap-endpoint: 你的swap服务地址
+swap-endpoint: your swapaddr
 verbosity: trace
-welcome-message: "开始吧BZZ BZZ BZZ "
+welcome-message: "BZZ BZZ BZZ "
 debug-api-enable: true
